added links to style sheets

--- a/0x00-html_css_basics/0-index.html
+++ b/0x00-html_css_basics/0-index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="styles/0-common.css">
+    <link rel="stylesheet" href="styles/0-header.css">
     <title>HBTN food</title>
   </head>
   <body>
